polkadot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: polkadot
  name: polkadot
spec:
  replicas: 1
  selector:
    matchLabels:
      run: polkadot
  template:
    metadata:
      labels:
        run: polkadot
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - image: parity/polkadot
        name: polkadot
        args: ["--chain", "westend"]
        ports:
        - containerPort: 30333
        - containerPort: 9933
        volumeMounts:
        - mountPath: "/root/.local/share/polkadot"
          name: polkadot
      volumes:
      - name: polkadot
        persistentVolumeClaim:
          claimName: polkadot
...
---
apiVersion: v1
kind: Service
metadata:
  name: polkadot
spec:
  selector:
    run: polkadot
  ports:
  - name: port1
    port: 30333
    protocol: TCP
    targetPort: 30333
  - name: port2
    port: 9933
    protocol: TCP
    targetPort: 9933
...
